--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <div class="course-img">
                             <a href="course-inner-page.html"><img src="assets/images/course-2.jpg" alt="Course 1"></a>
                         </div>
-                        <a href="#">
+                        <a href="course-inner-page.html">
                             <h4 class="title">UI Design Master Course</h4>
                         </a>
                         <p>Learn user interface design with
